--- a/html/assets/css/responsive.css
+++ b/html/assets/css/responsive.css
@@ -1,12 +1,32 @@
 @media screen and (max-width:991px) {
-    .header .nav-link {
-        padding: 7px 0px !important;
+     .header .nav-link {
+        padding: 8px 2px !important;
+    }
+    .mobile_menu .offcanvas-header {
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: 12px 16px 0px 0px;
+    }
+
+    .mobile_menu .offcanvas-header button{
+        outline: none !important;
+        box-shadow: none !important;
+    }
+    
+
+    .mobile_menu.offcanvas {
+        width: 300px !important;
+        border: none !important;
     }
 }
 
 @media screen and (max-width:765px) {
     .feature_wrapper .feature_name h3 {
         font-size: 20px;
+    }
+    .banner_content h2{
+        font-size: 30px;
     }
 
 }
