--- a/html/assets/css/main.css
+++ b/html/assets/css/main.css
@@ -1,4 +1,3 @@
-
 html {
     color: #222;
     font-size: 1em;
@@ -114,6 +113,7 @@ body {
     outline: none !important;
     margin-top: 13px;
 }
+
 /* ========================= Banner =============================== */
 
 .banner_content h2 {
@@ -484,7 +484,7 @@ body {
 .footer_menu ul li a {
     color: var(--white);
     font-size: 14px;
-    font-family:'Inter';
+    font-family: 'Inter';
     transition: all 0.3s ease;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
@@ -492,8 +492,8 @@ body {
     -o-transition: all 0.3s ease;
 }
 
-.footer_menu ul li a:hover{
-    color:var(--primary);
+.footer_menu ul li a:hover {
+    color: var(--primary);
 }
 
 .footer_menu ul li:first-child {
@@ -523,12 +523,21 @@ body {
 
 
 /* ========================= Login =============================== */
- 
+
 .login_form .form-label {
     font-size: 14px;
     color: var(--black);
-    font-family:'Inter';
+    font-family: 'Inter';
     font-weight: 600;
+}
+
+.login_form {
+    padding: 26px 20px;
+    background: #fff;
+    border-radius: 8px;
+    border-left: 1px dashed var(--primary);
+    border-right: 1px dashed var(--primary);
+    box-shadow: rgb(99 99 99 / 20%) 0px 2px 8px 0px;
 }
 
 .login_form .form-control {
@@ -545,22 +554,18 @@ body {
 
 .login_form .btn-primary {
     border: none;
-    border-radius: 500px;
+    border-radius: 2px;
     padding: 11px 50px;
     font-family: 'Inter', sans-serif;
     font-weight: 500;
     background: var(--black);
+    width: 100%;
 }
 
 .login_form .btn-primary:hover {
     background: var(--primary);
 }
 
-.login_form {
-    padding: 26px 20px;
-    background: #fff;
-    box-shadow: rgb(17 17 26 / 10%) 0px 0px 16px;
-}
 
 .login_title h3 {
     font-size: 23px;
@@ -568,17 +573,64 @@ body {
     font-weight: 600;
 }
 
+.login_form .divider {
+    position: relative;
+}
 
+.login_form .divider:before {
+    position: absolute;
+    content: "";
+    bottom: 14px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background: #f0f0f0;
+}
 
+.login_form .divider span {
+    font-size: 19px;
+    font-family: "Inter";
+    background: #fff;
+    z-index: 1;
+    position: relative;
+    padding: 0px 18px;
+    text-transform: uppercase;
+    font-weight: 400;
+}
 
+.login_form .social_login a {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    background: #ddd;
+    border-radius: 50px;
+    margin: 0px 4px;
+    color: #fff;
+    font-size: 15px;
+    line-height: 39px;
+}
 
+.login_form .fa_facebook {
+    background: #0D8AF0 !important;
+}
 
+.login_form .fa_twitter {
+    background: #1D9BF0 !important;
+}
 
+.login_form .fa_google {
+    background: #EB4436 !important;
+}
 
+.login_form .bottom p {
+    margin: 0;
+    font-size: 15px;
+    color: #444;
+}
 
-
-
-
+.login_form .bottom p a {
+    color: var(--primary);
+}
 
 
 
