--- a/html/assets/user/css/responsive.css
+++ b/html/assets/user/css/responsive.css
@@ -1,9 +1,9 @@
 /* min width: 1400px */
 
-@media screen and (min-width:1400px){
+@media screen and (min-width:1400px) {
     .setting_tab_contetn {
-      padding: 0px 110px;
-    }  
+        padding: 0px 110px;
+    }
 }
 
 
@@ -23,9 +23,10 @@
         padding-top: 150px;
     }
 
-    .content-wrapper>.content{
-        padding:0 3.5rem;
+    .content-wrapper>.content {
+        padding: 0 3.5rem;
     }
+
     .content-header {
         padding: 44px 0px 22px 3.5rem !important;
     }
@@ -33,8 +34,17 @@
     nav.main-header.navbar.navbar-expand.navbar-white.navbar-light {
         display: none;
     }
-    .add_content_modal .modal-lg{
+
+    .add_content_modal .modal-lg {
         max-width: 880px;
+    }
+
+    .social_add_form {
+        padding: 0px 45px;
+    }
+
+    .about_user #logofile {
+        margin:0 auto;
     }
 }
 
@@ -44,23 +54,32 @@
     .card_preview_wrapper {
         margin: 40px 0px;
     }
+
     .setting_tab_contetn {
-      padding: 0px 90px;
+        padding: 0px 90px;
+    }
+
+    .add_form_wrap {
+        overflow: hidden;
+        overflow-y: auto;
+        height: 583px;
     }
 }
 
 /* max width: 767px  */
 @media screen and (max-width: 767px) {
     .account_setting .nav-tabs.flex-column {
-        border-right:none !important;
+        border-right: none !important;
         border-bottom: 1px solid #EEE !important;
         padding-bottom: 16px;
     }
+
     #vert-tabs-tabContent {
-     margin-top: 32px;
+        margin-top: 32px;
     }
+
     .setting_tab_contetn {
-      padding: 0px 40px;
+        padding: 0px 40px;
     }
 }
 
@@ -84,7 +103,8 @@
     #smartwizard .nav {
         position: inherit;
     }
+
     .setting_tab_contetn {
-      padding: 0px 0px;
+        padding: 0px 0px;
     }
 }
