--- a/html/assets/user/css/style.css
+++ b/html/assets/user/css/style.css
@@ -134,6 +134,7 @@ body {
     overflow: hidden;
     overflow-y: auto !important;
 }
+
 .card_preview_wrapper .card_overflow::-webkit-scrollbar {
     width: 0;
     height: 0
@@ -151,14 +152,16 @@ body {
 
 .card_preview_wrapper .clock {
     position: absolute;
-    top: 7px;
+    top: 8px;
     left: 21px;
+    font-size: 14px;
+    font-family: 'Inter';
 }
 
 .card_preview_wrapper .mobile_icon {
     position: absolute;
-    top: 7px;
-    right: 14px;
+    top: 6px;
+    right: 8px;
 }
 
 .card_preview_wrapper .profile_image img {
@@ -238,6 +241,7 @@ body {
     font-family: 'DM Sans';
     font-weight: 500;
 }
+
 .dashboard_card {
     margin-bottom: 1rem;
     background-color: #fff;
@@ -389,6 +393,7 @@ body {
     box-shadow: none;
     padding: 8px 44px;
     border-radius: 50px;
+    font-size: 13px;
 }
 
 .btn-primary:hover {
@@ -404,7 +409,7 @@ body {
     box-shadow: 0 0 0 0 rgb(38 143 255 / 50%);
 }
 
-.dashboard_card.user_card{
+.dashboard_card.user_card {
     display: block;
 }
 
@@ -432,6 +437,7 @@ body {
     box-shadow: rgb(100 100 111 / 10%) 0px 7px 29px 0px;
     background: #fff;
 }
+
 .dashboard_card.user_card .logo img {
     width: 40px !important;
     height: 40px !important;
@@ -457,6 +463,7 @@ body {
     font-family: 'Inter';
     margin-bottom: 3px;
 }
+
 .dashboard_card.user_card .profile_name h5 {
     font-size: 11px;
     color: #454545;
@@ -500,7 +507,7 @@ body {
 }
 
 .create_card_wrapper .tab-content {
-    max-height: 610px;
+    height: 660px;
     padding: 30px;
     overflow: hidden;
     overflow-y: auto;
@@ -511,7 +518,7 @@ body {
     padding: 30px 20px;
 }
 
-.create_card_wrapper .nav-tabs.flex-column .nav-link{
+.create_card_wrapper .nav-tabs.flex-column .nav-link {
     margin-right: 0px !important;
 }
 
@@ -527,14 +534,27 @@ body {
     clear: both;
 }
 
+.tab-content .tab_body .back a {
+    font-size: 13px;
+    color: #888;
+}
+
+.tab-content .tab_body .back a i {
+    padding-right: 4px;
+    vertical-align: middle;
+}
+
 .social_media_list .single_list {
     background: rgb(247, 247, 247);
     border-radius: 12px;
     margin-bottom: 10px;
-    padding: 16px 16px;
     vertical-align: middle;
-    align-items: center;
     justify-content: space-between;
+    align-items: center !important;
+}
+
+.social_media_list .media_btn {
+    margin-right: 10px;
 }
 
 .social_media_list .social_media_name img {
@@ -545,6 +565,13 @@ body {
 .social_media_list .social_media_name {
     position: absolute;
     margin-left: 9px;
+    margin-top: -28px;
+}
+
+.social_media_list .single_list a {
+    display: initial;
+    width: 100%;
+    padding: 16px;
 }
 
 .social_media_list .social_media_name span {
@@ -569,6 +596,7 @@ body {
     background-color: #111;
     box-shadow: none;
 }
+
 .social_media_list .custom-control-label {
     outline: none !important;
     box-shadow: none !important;
@@ -588,16 +616,17 @@ body {
 
 .social_media_list .drag_drap {
     cursor: grab;
+    display: inline;
 }
 
 
 .add_content_modal .modal {
     backdrop-filter: blur(4px);
-    background: linear-gradient(315deg, rgb(255 255 255 / 50%) 0%, rgb(255 255 255 / 30%) 100%);
+    background: linear-gradient(315deg, rgb(0 0 0 / 50%) 0%, rgb(0 0 0 / 30%) 100%);
     backdrop-filter: blur(4px);
 }
 
-.modal-backdrop.show{
+.modal-backdrop.show {
     opacity: 0;
 }
 
@@ -606,7 +635,7 @@ body {
     box-shadow: 0px 12px 40px rgb(0 0 0 / 20%);
     border-radius: 20px;
     padding: 30px 30px 14px 30px;
-    height: 660px;
+    min-height: 680px;
 }
 
 .add_content_modal .close {
@@ -637,7 +666,7 @@ body {
     border-radius: 6px;
 }
 
-.add_content_modal .modal-header .input-type-text{
+.add_content_modal .modal-header .input-type-text {
     border: none;
     border-radius: 0px 6px 6px 0px;
 }
@@ -661,19 +690,22 @@ body {
     overflow: hidden;
     overflow-y: auto;
     height: 495px;
-    padding:0px 4px;
+    padding: 0px 4px;
 }
 
 .add_content_modal ::-webkit-scrollbar {
     width: 5px;
     height: 5px
 }
+
 .add_content_modal ::-webkit-scrollbar-button {
     background: #fff;
 }
+
 .add_content_modal ::-webkit-scrollbar-track-piece {
     background: #fff;
 }
+
 .add_content_modal ::-webkit-scrollbar-thumb {
     background: #ddd;
 }
@@ -729,6 +761,285 @@ body {
     font-weight: 500;
     padding-left: 4px;
 }
+
+.second_modal h5 a {
+    font-size: 12px;
+    font-family: 'Inter';
+    color: #666;
+    vertical-align: middle;
+}
+
+.add_form_wrap .form-group img {
+    width: 70px;
+    height: 70px;
+    border-radius: 10px;
+    margin-right: 10px;
+}
+
+.add_form_wrap .imgLabel span {
+    font-size: 13px;
+    font-family: 'Inter';
+    color: #03a9f4;
+    font-weight: 500 !important;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.add_form_wrap label {
+    font-size: 13px;
+    color: #111;
+    font-family: 'Inter';
+    font-weight: 600 !important;
+}
+
+
+.add_form_wrap .form-control {
+    background: #F7F7F7 !important;
+    border: none;
+    height: 56px;
+    font-size: 14px;
+    color: #111;
+    outline: none;
+    box-shadow: none;
+    border-radius: 10px;
+}
+
+
+.add_form_wrap .form-group a svg {
+    width: 14px;
+}
+
+.add_form_wrap .form-group a {
+    font-size: 13px;
+    color: #03a9f4;
+}
+
+.add_form_wrap .btn.btn-secondary {
+    background: transparent !important;
+    color: #111;
+    border: 1px solid #DDD;
+    font-size: 14px;
+    font-family: 'DM Sans';
+    border-radius: 50px;
+    padding: 8px 34px;
+}
+
+
+.edit_social_form.add_form_wrap {
+    height: auto !important;
+    overflow: auto;
+    clear: both;
+}
+
+.edit_social_form .btn-primary {
+    padding: 10px 40px !important;
+}
+
+.edit_social_form .text-danger {
+    border: none !important;
+    background: none !important;
+    font-size: 14px;
+    font-family: 'DM Sans';
+    font-weight: 400;
+    vertical-align: middle;
+}
+
+.about_user .btn-primary {
+    padding: 10px 41px !important;
+    font-size: 13px !important;
+}
+
+.about_user #profile_file {
+    width: 90px;
+    height: 90px;
+    background: #ddd;
+    border-radius: 100px;
+    display: block;
+     cursor: pointer;
+}
+
+.about_user #profile_file  img {
+    width: 90px;
+    height: 90px;
+    background: #ddd;
+    border-radius: 100px;
+    display: block;
+}
+
+.about_user #logofile {
+    width: 90px;
+    height: 90px;
+    border-radius: 100px;
+    display: block;
+    cursor: pointer;
+}
+
+.about_user #logofile  img {
+    width: 90px;
+    height: 90px;
+    border-radius: 100px;
+    display: block;
+}
+
+
+.about_user #coverfile {
+    width: 100%;
+    height: 100px;
+    background: #ddd;
+    border-radius: 6px;
+    display: block;
+     cursor: pointer;
+}
+
+.about_user #coverfile  img {
+    width: 100%;
+    height: 100px;
+    border-radius: 6px;
+    display: block;
+}
+
+ 
+.colorform .colorcode {
+    border: 1px solid #ddd;
+    width: 28px;
+    height: 28px;
+    border-radius: 50px;
+    text-align: center;
+    position: relative;
+    vertical-align: text-top;
+    margin-top: -1px;
+    margin-right: 6px;
+}
+
+.colorform .colorcode img {
+    width: 14px;
+    margin-top: 4px;
+}
+
+.colorform .colorcode input[type="color"] {
+    width: 25px;
+    height: 24px;
+    position: absolute;
+    top: 0px;
+    left: 0;
+    border-radius: 100px;
+    opacity: 0;
+}
+
+
+.color_group .custom-switch .custom-control-label::before {
+    left: -12px;
+    outline: none !important;
+    box-shadow: none !important;
+}
+
+.color_group .custom-switch .custom-control-label::after {
+    left: -9px;
+}
+
+.color_group .custom-control-label {
+    padding-left: 37px;
+    line-height: 24px;
+}
+
+.color_group .custom-control-input:checked~.custom-control-label::before {
+    border-color: #000000;
+    background-color: #000000;
+}
+
+
+/*  color */
+
+.bg_btn .btn {
+    width: 25px;
+    height: 25px;
+    border-radius: 4px;
+    position: relative;
+    margin: 0px 2px;
+    border: none !important;
+}
+
+.bg_btn .form-check {
+    padding: 0 6px;
+    margin: 0;
+    display: inline-block;
+}
+/*.bg_btn .form-check-input {
+    outline: none !important;
+    box-shadow: none !important;
+    position: relative;
+}
+
+.bg_btn .form-check-input:before {
+    position: absolute;
+    content: "";
+    top: -3px;
+    left: -3px;
+    width: 31px;
+    height: 32px;
+    border-radius: 4px;
+    opacity: 0;
+    transition: all 0.2s ease;
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    -ms-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+    transform: scale(0);
+    border: 1px solid #9b9b9b;
+    border-radius: 50px;
+}
+
+.bg_btn .form-check-input:checked[type=radio]:before {
+    opacity: 1;
+    transform: scale(1);
+}
+
+.bg_btn .form-check-input:checked[type=radio] {
+    background-image: none !important;
+}
+
+.btn-colorOne {
+    background-color: #F45A57 !important;
+}
+
+.btn-colorTwo {
+    background-color: #FB9241 !important;
+}
+
+.btn-colorThree {
+    background-color: #FAC000 !important;
+}
+
+.btn-colorFour {
+    background-color: #C8A358 !important;
+}
+
+.btn-colorFive {
+    background-color: #3DB512 !important;
+}
+
+.btn-colorSix {
+    background-color: #00E0BB !important;
+}
+
+.btn-colorSeven {
+    background-color: #0F9BFF !important;
+}
+
+.btn-colorEight {
+    background-color: #3A4AF8 !important;
+}*/
+
+
+
+
+
+
+
+
+
+
+
 
 
 
