--- a/html/assets/user/css/style.css
+++ b/html/assets/user/css/style.css
@@ -193,6 +193,11 @@ body {
     color: #888;
 }
 
+.profile_name h6 {
+    font-size: 12px;
+    color: #888;
+}
+
 .card_preview_wrapper .profile_name h3 {
     font-size: 15px;
     color: #444;
@@ -950,34 +955,36 @@ body {
 
 /*  color */
 
-.bg_btn .btn {
+.bg_btn .form-check label{
     width: 25px;
     height: 25px;
-    border-radius: 4px;
+    border-radius: 50px;
     position: relative;
     margin: 0px 2px;
     border: none !important;
+    cursor: pointer;
+     position: relative;
+}
+
+.bg_btn input[type=radio]{
+    display: none;
 }
 
 .bg_btn .form-check {
     padding: 0 6px;
     margin: 0;
     display: inline-block;
-}
-/*.bg_btn .form-check-input {
-    outline: none !important;
-    box-shadow: none !important;
-    position: relative;
+    vertical-align: middle;
+    padding-top: 7px;
 }
 
-.bg_btn .form-check-input:before {
+.bg_btn .form-check label:before {
     position: absolute;
     content: "";
-    top: -3px;
-    left: -3px;
-    width: 31px;
-    height: 32px;
-    border-radius: 4px;
+    top: -4px;
+    left: -4px;
+    width: 33px;
+    height: 33px;
     opacity: 0;
     transition: all 0.2s ease;
     -webkit-transition: all 0.2s ease;
@@ -985,17 +992,13 @@ body {
     -ms-transition: all 0.2s ease;
     -o-transition: all 0.2s ease;
     transform: scale(0);
-    border: 1px solid #9b9b9b;
+    border: 2px solid #d2d2d2;
     border-radius: 50px;
 }
 
-.bg_btn .form-check-input:checked[type=radio]:before {
+.bg_btn .form-check-input:checked~label:before {
     opacity: 1;
     transform: scale(1);
-}
-
-.bg_btn .form-check-input:checked[type=radio] {
-    background-image: none !important;
 }
 
 .btn-colorOne {
@@ -1028,11 +1031,12 @@ body {
 
 .btn-colorEight {
     background-color: #3A4AF8 !important;
-}*/
+}
 
 
 
 
+ 
 
 
 
