--- a/html/assets/css/main.css
+++ b/html/assets/css/main.css
@@ -77,6 +77,14 @@ body {
     --white: #ffffff;
 }
 
+/* ========================= Header Top =============================== */
+
+.header_top {
+    background: #111;
+    padding: 5px 0px;
+}
+
+
 /* ========================= Header =============================== */
 
 .header {
