--- a/html/assets/css/main.css
+++ b/html/assets/css/main.css
@@ -557,7 +557,7 @@ body {
 
 .widget_title h3 {
     font-size: 18px;
-    color: #fff;
+    color: #d4d3d3;
     font-family: 'Inter';
     font-weight: 500;
 }
