--- a/public/assets/css/dashboard-style.css
+++ b/public/assets/css/dashboard-style.css
@@ -903,7 +903,7 @@ body {
     display: block;
 }
 
- 
+
 .colorform .colorcode {
     border: 1px solid #ddd;
     width: 28px;
@@ -1032,22 +1032,17 @@ body {
 .colorEight {
     background-color: #9B51E0 !important;
 }
-
-
-
-
- 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+#btnFinish {
+    border-radius: 50px;
+    font-size: 14px;
+    font-family: 'Inter';
+    font-weight: 500;
+    background: #111111;
+    border: none !important;
+    padding: 8px 42px;
+    margin: 6px 11px;
+    color: #fff;
+}
+.sw-btn#btnFinish  {
+    padding: 12px 90px !important;
+}
