--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -596,7 +596,7 @@ body {
 .widget_title h3 {
     font-size: 18px;
     color: #d4d3d3;
-    font-family: 'Inter';
+    font-family: 'Gilroy-Light';
     font-weight: 500;
 }
 
