--- a/public/assets/css/dashboard-style.css
+++ b/public/assets/css/dashboard-style.css
@@ -1188,3 +1188,33 @@ body {
     box-shadow: none;
     border-radius: 10px;
 }
+
+
+
+
+
+.social_icon_up .slim {
+    width: 72px !important;
+    height: 75px !important;
+    border-radius: 6px;
+    display: inline-block;
+}
+
+.social_icon_up .slim-status {
+    padding: 2px !important;
+}
+
+.social_icon_up .slim label p {
+    font-size: 9px !important;
+}
+
+.social_icon_up .slim-btn {
+    width: 23px !important;
+    height: 23px !important;
+    margin: 4px 3px !important;
+    opacity: 0;
+}
+
+.social_icon_up .slim:hover .slim-btn {
+    opacity: 1;
+}
